--- a/scss/config/_settings.scss
+++ b/scss/config/_settings.scss
@@ -134,7 +134,7 @@ $body-font-family: $regular-font-family;
 // $last-child-float: $opposite-direction;
 
 // We use these as default colors throughout
-$primary-color: #FF6A5D;
+$primary-color: #FF5F51;
 // $secondary-color: #e7e7e7;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
@@ -601,7 +601,7 @@ $button-font-family: $demi-font-family;
 // We use these to control video container padding and margins
 // $flex-video-padding-top: rem-calc(25);
 // $flex-video-padding-bottom: 67.5%;
-$flex-video-margin-bottom: rem-calc(40);
+$flex-video-margin-bottom: rem-calc(0);
 
 // We use this to control widescreen bottom padding
 // $flex-video-widescreen-padding-bottom: 56.34%;
