--- a/scss/site/_home.scss
+++ b/scss/site/_home.scss
@@ -56,6 +56,7 @@
 * -------------------------------------
 */
 .about {
+  position: relative;
   background-color: #ffffff;
   hr {
     @include divider(#EBEAE5);
